Adição de endpoints e muitas alterações no frontend

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <table id="table"></table>
-    </div>
+    <table id="table"></table>
+    <p id="source" class="source"></p>
 </body>
 
 </html>
